# Synge

./: .gitignore  CODE-OF-CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-merge.yml  build.yml  lint.yml  publish.yml  release.yml
.notebook/: BenchmarkVf_shapes.ipynb  benchmarkVf.ipynb  benchmarkVf_Imbrication.ipynb
data/data_input/: centroids.json  par_shapes.json  parametres_distribution.json  parametres_shapes.json
src/benchmark/: benchmark.py  cluster.py  disribution.py  functions.py  generator.py  main.py  validators.py
src/synge/: benchmark.py  cluster.py  distribution.py  functions.py  generator.py  main.py  overlap_functions.py  shape.py  validate_param.py  validators.py  visualization.py
