[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["NourKired <n.kired@okp4.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.4"
six = "^1.16.0"
tqdm = "^4.64.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
