[tool.poetry]
name = "synge"
version = "0.1.0"
description = ""
authors = ["KIRED Nour Elhouda <n.kired@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.5.3"
plotly = "^5.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
synge = "src.synge.main:cli"
