[tool.poetry]
name = "synge"
version = "0.1.0"
description = ""
authors = ["KIRED Nour Elhouda <n.kired@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^2.0.1"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
synge = "src.synge.main:cli"
